--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 </head>
 <body>
-<div id="app">
+<div id="app" class="application_container">
 	<h1>Interface Builder!</h1>
 	<p>
 		<router-link to="/interfaceBuilder">Go to Interface Builder</router-link>
