--- a/src/indexTemplate.html
+++ b/src/indexTemplate.html
@@ -1,5 +1,5 @@
 <div>
-    <v-navigation-drawer permanent class="blue lighten-3" dark>
+    <v-navigation-drawer :dark="dark" :floating="floating" :height="height">
         <v-list>
             <v-list-tile v-for="item in items" :key="item.title" @click="">
                 <v-list-tile-action>
